tests/machine/x/cobol/pure_global_fold.error
cobc: exit status 1
/workspace/mochi/tests/machine/x/cobol/pure_global_fold.cob:8: error: syntax error, unexpected USING
/workspace/mochi/tests/machine/x/cobol/pure_global_fold.cob: in paragraph 'INC':
/workspace/mochi/tests/machine/x/cobol/pure_global_fold.cob:13: error: syntax error, unexpected PROCEDURE
/workspace/mochi/tests/machine/x/cobol/pure_global_fold.cob:14: error: 'X' cannot be used here

